[project]
name = "olx-crawler"
version = "0.0.0"
description = "Project description"
requires-python = ">=3.12"
dependencies = [
    "ahocorapy~=1.6.2",
    "click~=8.1.7",
    "inject~=5.2.1",
    "selenium~=4.27.1",
    "tqdm~=4.67.1",
    "validators~=0.34.0",
    "webdriver-manager>=4.0.2",
]

[tool.uv]
dev-dependencies = ["bandit", "black", "flake8", "isort", "pre-commit"]

[tool.uv.sources]
